--- a/Backend/Dev-learning-Platform/src/main/resources/application-prod.properties
+++ b/Backend/Dev-learning-Platform/src/main/resources/application-prod.properties
@@ -1,8 +1,8 @@
 // Configuración de producción con la DB de OCI
 
-spring.datasource.url=jdbc:mysql://{DB_HOST}:{DB_PORT}/{DB_NAME}
-spring.datasource.username={DB_USER}
-spring.datasource.password={DB_PASSWORD}
+spring.datasource.url=jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
