Fix path CI 2.0

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,9 @@ jobs:
         distribution: 'temurin'
 
     - name: Build with Maven
-      run: ./mvnw test -Dspring.profiles.active=dev
+      run: |
+        cd /Backend/Dev-learning-Platform
+        ./mvnw test -Dspring.profiles.active=dev
 
     - name: Deploy to OCI VM
       if: success() # Solo si los pasos anteriores fueron exitosos
