--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,21 +63,39 @@ jobs:
             sleep 10
             
             echo "=== Verificando estado del servicio ==="
+            # Esperar un poco más para que systemd tenga tiempo de intentar el start
+            sleep 5
+            
             if sudo systemctl is-active --quiet elearning-backend; then
               echo "✅ Despliegue exitoso - Servicio activo"
               sudo systemctl status elearning-backend --no-pager -l
               
-              # Opcional: Health check
+              # Health check
               echo "=== Verificando health endpoint ==="
-              sleep 5
+              sleep 10
               curl -f http://localhost:8080/actuator/health || echo "⚠️  Health check no disponible"
               
             else
               echo "❌ Error: El servicio no se inició correctamente"
-              echo "=== Estado del servicio ==="
+              echo "=== Estado detallado del servicio ==="
               sudo systemctl status elearning-backend --no-pager -l
-              echo "=== Últimos logs ==="
-              sudo journalctl -u elearning-backend --no-pager -l -n 20
+              
+              echo "=== Últimos 50 logs del servicio ==="
+              sudo journalctl -u elearning-backend --no-pager -l -n 50
+              
+              echo "=== Verificando si el JAR existe ==="
+              ls -la target/Dev-learning-Platform-0.0.1-SNAPSHOT.jar
+              
+              echo "=== Verificando permisos ==="
+              ls -la target/
+              
+              echo "=== Verificando Java ==="
+              java -version
+              which java
+              
+              echo "=== Intentando ejecutar JAR manualmente para debugging ==="
+              timeout 30s java -jar target/Dev-learning-Platform-0.0.1-SNAPSHOT.jar --spring.profiles.active=prod || echo "Ejecución manual falló"
+              
               exit 1
             fi
             
@@ -86,4 +104,4 @@ jobs:
             exit 1
           fi
           
-          echo "=== Deployment completado exitosamente ==="
+          echo "=== Deployment completado exitosamente ===
