--- a/Backend/Dev-learning-Platform/src/main/resources/application-dev.properties
+++ b/Backend/Dev-learning-Platform/src/main/resources/application-dev.properties
@@ -9,3 +9,7 @@ spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=update
+
+// Configuración de JWT
+jwt.secret.key=${JWT_SECRET_KEY}
+jwt.expiration.time=${JWT_EXPIRATION_TIME}
