--- a/Backend/Dev-learning-Platform/.gitignore
+++ b/Backend/Dev-learning-Platform/.gitignore
@@ -33,5 +33,5 @@ build/
 .vscode/
 
 .github/instructions/Dev_Auth.instructions.md
-/Auth.md
-/env
+
+/Backend/Dev-learning-Platform/src/main/resources/.env
