Add feature Course and Remove Dev_Auth.instructions.md from tracking and update .gitignore
- Stop tracking .github/instructions/Dev_Auth.instructions.md
- Add .gitignore rules to prevent instruction files from being committed
- Keep instruction files as local development resources only

--- a/Backend/Dev-learning-Platform/.gitignore
+++ b/Backend/Dev-learning-Platform/.gitignore
@@ -32,6 +32,9 @@ build/
 ### VS Code ###
 .vscode/
 
+### Development Instructions ###
 .github/instructions/Dev_Auth.instructions.md
+.github/instructions/*.instructions.md
 
+### Environment Files ###
 /Backend/Dev-learning-Platform/src/main/resources/.env
