--- a/Backend/Dev-learning-Platform/src/main/resources/application.properties
+++ b/Backend/Dev-learning-Platform/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=Dev-learning-Platform
 
-// Configuración DB de pruebas H2
+# Configuración DB de pruebas H2
 spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
