feat: agregar configuración de Tailwind CSS y PostCSS, incluyendo nuevos plugins y alias en jsconfig.json, además de actualizar las dependencias en package.json y package-lock.json.

--- a/Frontend/jsconfig.json
+++ b/Frontend/jsconfig.json
@@ -2,7 +2,13 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@/*": ["src/*"]
+      "@/*": ["src/*"],
+      "@/features/*": ["src/features/*"],
+      "@/components/*": ["src/components/*"],
+      "@/ui/*": ["src/ui/*"],
+      "@/shared/*": ["src/shared/*"],
+      "@/core/*": ["src/core/*"],
+      "@/interfaces/*": ["src/interfaces/*"],
     },
     "checkJs": false,
     "typeRoots": ["./node_modules/@types"]
