Config connection to server

--- a/Backend/Dev-learning-Platform/src/main/resources/application.properties
+++ b/Backend/Dev-learning-Platform/src/main/resources/application.properties
@@ -1,5 +1,9 @@
 spring.application.name=Dev-learning-Platform
 
+# Configuración del servidor para escuchar en todas las interfaces
+server.address=0.0.0.0
+server.port=8080
+
 // Configuración DB de pruebas H2
 spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:testdb
