--- a/Backend/Dev-learning-Platform/src/main/resources/application-dev.properties
+++ b/Backend/Dev-learning-Platform/src/main/resources/application-dev.properties
@@ -1,5 +1,9 @@
 spring.application.name=Dev-learning-Platform
 
+# Configuración del servidor para desarrollo
+server.address=0.0.0.0
+server.port=8080
+
 // Configuración DB de pruebas H2
 spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:testdb
@@ -13,3 +17,4 @@ spring.jpa.hibernate.ddl-auto=update
 // Configuración de JWT
 jwt.secret.key=${JWT_SECRET_KEY}
 jwt.expiration.time=${JWT_EXPIRATION_TIME}
+
