--- a/Backend/Dev-learning-Platform/src/main/resources/application-prod.properties
+++ b/Backend/Dev-learning-Platform/src/main/resources/application-prod.properties
@@ -1,5 +1,9 @@
 // Configuración de producción con la DB de OCI
 
+# Configuración del servidor para producción
+server.address=0.0.0.0
+server.port=8080
+
 spring.datasource.url=jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
