Fix comments configuration

--- a/Backend/Dev-learning-Platform/src/main/resources/application-prod.properties
+++ b/Backend/Dev-learning-Platform/src/main/resources/application-prod.properties
@@ -1,4 +1,4 @@
-// Configuración de producción con la DB de OCI
+# Configuración de producción con la DB de OCI
 
 # Configuración del servidor para producción
 server.address=0.0.0.0
