--- a/Backend/Dev-learning-Platform/src/main/resources/application.properties
+++ b/Backend/Dev-learning-Platform/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=Dev-learning-Platform
 server.address=0.0.0.0
 server.port=8080
 
-// Configuración DB de pruebas H2
+# Configuración DB de pruebas H2
 spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
