--- a/Backend/Dev-learning-Platform/src/main/resources/application-dev.properties
+++ b/Backend/Dev-learning-Platform/src/main/resources/application-dev.properties
@@ -4,7 +4,7 @@ spring.application.name=Dev-learning-Platform
 server.address=0.0.0.0
 server.port=8080
 
-// Configuración DB de pruebas H2
+# Configuración DB de pruebas H2
 spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
@@ -14,7 +14,7 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=update
 
-// Configuración de JWT
+# Configuración de JWT
 jwt.secret.key=${JWT_SECRET_KEY}
 jwt.expiration.time=${JWT_EXPIRATION_TIME}
 
