--- a/Backend/Dev-learning-Platform/src/main/resources/application.properties
+++ b/Backend/Dev-learning-Platform/src/main/resources/application.properties
@@ -14,3 +14,6 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=update
 
+# Configuración de JWT
+jwt.secret.key=${JWT_SECRET_KEY}
+jwt.expiration.time=${JWT_EXPIRATION_TIME}
