--- a/Backend/Dev-learning-Platform/src/main/resources/application.properties
+++ b/Backend/Dev-learning-Platform/src/main/resources/application.properties
@@ -17,5 +17,5 @@ jwt.expiration.time=${JWT_EXPIRATION_TIME}
 # ==============================================
 # CONFIGURACIÓN DE SERVIDOR
 # ==============================================
-server.port=8080
-server.url=http://localhost:8080
+# server.port=8080
+# server.url=http://localhost:8080
