--- a/Frontend/.env.example
+++ b/Frontend/.env.example
@@ -1,6 +1,6 @@
 VITE_APP_TITLE=EduPlatform
 #Aqui se debe colocar la url de la api ya en local
-VITE_API_URL_EXAMPLE=localhost:3000
+VITE_API_URL_EXAMPLE=http://149.130.176.157:8080
  #variable para identificar en en que etapa se encuetra la plataforma 'true' = modo produccion 'false' modo desarrollo
 VITE_DEBUG_MODE=false
 
