Improve upload_images

--- a/Backend/Dev-learning-Platform/src/main/resources/application-dev.properties
+++ b/Backend/Dev-learning-Platform/src/main/resources/application-dev.properties
@@ -1,6 +1,9 @@
 spring.application.name=Dev-learning-Platform
 
-# Configuración DB de pruebas H2
+# ==============================================
+# CONFIGURACIÓN DB DE DESARROLLO (H2)
+# ==============================================
+
 spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
@@ -10,7 +13,10 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=update
 
-# Configuración de JWT
+# ==============================================
+# CONFIGURACIÓN DE JWT
+# ==============================================
+
 jwt.secret.key=${JWT_SECRET_KEY}
 jwt.expiration.time=${JWT_EXPIRATION_TIME}
 
@@ -18,24 +24,40 @@ jwt.expiration.time=${JWT_EXPIRATION_TIME}
 # CONFIGURACIÓN DE CARGA DE ARCHIVOS
 # ==============================================
 
-# Configuración Spring Boot para multipart
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=5MB
 spring.servlet.multipart.max-request-size=5MB
 spring.servlet.multipart.resolve-lazily=false
 
-# Configuración personalizada para imágenes de perfil
-app.upload.profile-images.path=uploads/profiles
-app.upload.profile-images.base-url=${server.url:http://localhost:8080}/uploads/profiles
-app.upload.profile-images.max-file-size=5242880
-app.upload.profile-images.allowed-extensions=jpg,jpeg,png,gif,webp,svg
-app.upload.profile-images.allowed-mime-types=image/jpeg,image/png,image/gif,image/webp,image/svg+xml
+# ==============================================
+# CONFIGURACIÓN PARA DESARROLLO LOCAL
+# ==============================================
+app.upload.storage-type=local
+app.upload.local.base-path=uploads
+app.upload.local.profile-images-path=profiles
+app.upload.local.base-url=http://localhost:8080/uploads
 
-# Configuración del frontend para CORS
+# ==============================================
+# CONFIGURACIÓN DE OCI Object Storage (DESARROLLO)
+# ==============================================
+
+# Para desarrollo, usar almacenamiento local
+oci.enabled=false
+oci.config.profile=DEFAULT
+oci.config.file=${user.home}/.oci/config
+oci.objectstorage.region=sa-bogota-1
+oci.objectstorage.namespace=axxillutcfyk
+oci.objectstorage.bucket-name=bucket-images
+oci.objectstorage.public-url-base=https://objectstorage.sa-bogota-1.oraclecloud.com/n/axxillutcfyk/b/bucket-images/o
+
+# ==============================================
+# CONFIGURACIÓN DE CORS
+# ==============================================
+
 app.frontend.url=http://localhost:3000
 
 # ==============================================
 # CONFIGURACIÓN DE SERVIDOR
 # ==============================================
+
 server.port=8080
-server.url=http://localhost:8080
