--- a/Backend/Dev-learning-Platform/src/main/resources/application-prod.properties
+++ b/Backend/Dev-learning-Platform/src/main/resources/application-prod.properties
@@ -7,9 +7,59 @@ server.port=8080
 server.url=http://localhost:8080
 
 
+spring.application.name=Dev-learning-Platform
+
+# ==============================================
+# CONFIGURACIÓN DB DE PRODUCCIÓN (MySQL OCI)
+# ==============================================
 spring.datasource.url=jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
+
+# ==============================================
+# CONFIGURACIÓN DE JWT
+# ==============================================
+jwt.secret.key=${JWT_SECRET_KEY}
+jwt.expiration.time=${JWT_EXPIRATION_TIME:86400000}
+
+# ==============================================
+# CONFIGURACIÓN DE CARGA DE ARCHIVOS
+# ==============================================
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=5MB
+spring.servlet.multipart.max-request-size=5MB
+spring.servlet.multipart.resolve-lazily=false
+
+# ==============================================
+# CONFIGURACIÓN DE ALMACENAMIENTO
+# ==============================================
+app.upload.storage-type=oci
+
+# ==============================================
+# CONFIGURACIÓN DE OCI Object Storage (PRODUCCIÓN)
+# ==============================================
+oci.enabled=true
+oci.config.profile=${OCI_CONFIG_PROFILE:DEFAULT}
+oci.config.file=${OCI_CONFIG_FILE:/home/opc/.oci/config}
+oci.objectstorage.region=sa-bogota-1
+oci.objectstorage.namespace=axxillutcfyk
+oci.objectstorage.bucket-name=bucket-images
+oci.objectstorage.public-url-base=https://objectstorage.sa-bogota-1.oraclecloud.com/n/axxillutcfyk/b/bucket-images/o
+oci.objectstorage.compartment-id=${OCI_COMPARTMENT_ID}
+
+# Configuración de autenticación OCI
+oci.auth.type=${OCI_AUTH_TYPE:config_file}
+oci.auth.instance-principal.enabled=${OCI_INSTANCE_PRINCIPAL:false}
+
+# ==============================================
+# CONFIGURACIÓN DE CORS
+# ==============================================
+app.frontend.url=${FRONTEND_URL:https://your-frontend-domain.vercel.app}
+
+# ==============================================
+# CONFIGURACIÓN DE SERVIDOR
+# ==============================================
+server.port=${PORT:8080}
