--- a/Backend/Dev-learning-Platform/src/main/resources/application.properties
+++ b/Backend/Dev-learning-Platform/src/main/resources/application.properties
@@ -1,16 +1,21 @@
 spring.application.name=Dev-learning-Platform
 
-# Configuración DB de pruebas H2
-spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.h2.console.enabled=true
+# ==============================================
+# CONFIGURACIÓN DB DE PRODUCCIÓN (MySQL OCI)
+# ==============================================
+
+spring.datasource.url=jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 
-# Configuración de JWT
+
+# ==============================================
+# CONFIGURACIÓN DE JWT
+# ==============================================
+
 jwt.secret.key=${JWT_SECRET_KEY}
 jwt.expiration.time=${JWT_EXPIRATION_TIME}
 
