Actualización de autenticación y corrección de redirección de cierre de sesión

--- a/Frontend/.env.example
+++ b/Frontend/.env.example
@@ -1,6 +1,11 @@
+# Nombre de la aplicación
 VITE_APP_TITLE=EduPlatform
-#Aqui se debe colocar la url de la api ya en local
-VITE_API_URL_EXAMPLE=http://149.130.176.157:8080
- #variable para identificar en en que etapa se encuetra la plataforma 'true' = modo produccion 'false' modo desarrollo
-VITE_DEBUG_MODE=false
 
+# URL base de la API (cambiar según el entorno: local, staging, producción)
+VITE_API_URL=http://localhost:8080
+
+# Entorno (development o production)
+VITE_ENV=development
+
+# Variable para activar logs de debug en frontend
+VITE_DEBUG_MODE=false
