--- a/Backend/Dev-learning-Platform/pom.xml
+++ b/Backend/Dev-learning-Platform/pom.xml
@@ -23,6 +23,7 @@
         <java.version>21</java.version>
         <oci.sdk.version>3.32.0</oci.sdk.version>
         <jjwt.version>0.11.5</jjwt.version>
+        <jersey.version>3.1.11</jersey.version>
     </properties>
     
     <dependencies>
@@ -75,19 +76,20 @@
             <scope>runtime</scope>
         </dependency>
         
-        <!-- OCI SDK -->
+        <!-- OCI SDK - VERSIÓN COMPATIBLE -->
         <dependency>
             <groupId>com.oracle.oci.sdk</groupId>
             <artifactId>oci-java-sdk-objectstorage</artifactId>
-            <version>${oci.sdk.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.oracle.oci.sdk</groupId>
-            <artifactId>oci-java-sdk-common-httpclient-jersey</artifactId>
-            <version>${oci.sdk.version}</version>
+            <version>3.45.0</version>
         </dependency>
         
-        <!-- Jersey (versiones gestionadas por Spring Boot) -->
+        <!-- JAX-RS Jakarta (para Spring Boot 3.x) -->
+        <dependency>
+            <groupId>jakarta.ws.rs</groupId>
+            <artifactId>jakarta.ws.rs-api</artifactId>
+        </dependency>
+        
+        <!-- Jersey Client (gestionado por Spring Boot) -->
         <dependency>
             <groupId>org.glassfish.jersey.core</groupId>
             <artifactId>jersey-client</artifactId>
@@ -96,16 +98,9 @@
             <groupId>org.glassfish.jersey.inject</groupId>
             <artifactId>jersey-hk2</artifactId>
         </dependency>
-        
-        <!-- JAX-RS -->
         <dependency>
-            <groupId>jakarta.ws.rs</groupId>
-            <artifactId>jakarta.ws.rs-api</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>javax.ws.rs</groupId>
-            <artifactId>javax.ws.rs-api</artifactId>
-            <version>2.1.1</version>
+            <groupId>org.glassfish.jersey.media</groupId>
+            <artifactId>jersey-media-json-jackson</artifactId>
         </dependency>
         
         <!-- Development Tools -->
@@ -148,6 +143,14 @@
                             <artifactId>lombok</artifactId>
                         </exclude>
                     </excludes>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <skipTests>false</skipTests>
+                    <testFailureIgnore>false</testFailureIgnore>
                 </configuration>
             </plugin>
         </plugins>
