--- a/Backend/Dev-learning-Platform/pom.xml
+++ b/Backend/Dev-learning-Platform/pom.xml
@@ -262,6 +262,7 @@
                 <dependency>
                     <groupId>com.oracle.oci.sdk</groupId>
                     <artifactId>oci-java-sdk-common-httpclient-jersey3</artifactId>
+					<scope>compile</scope>
                 </dependency>
             </dependencies>
         </profile>
