Config upload image

--- a/Backend/Dev-learning-Platform/src/main/resources/application-prod.properties
+++ b/Backend/Dev-learning-Platform/src/main/resources/application-prod.properties
@@ -4,7 +4,7 @@
 # CONFIGURACIÓN DE SERVIDOR
 # ==============================================
 server.port=8080
-server.url=http://localhost:8080
+server.url=http://149.130.176.157:8080
 
 
 spring.application.name=Dev-learning-Platform
@@ -63,3 +63,9 @@ app.frontend.url=${FRONTEND_URL:https://your-frontend-domain.vercel.app}
 # CONFIGURACIÓN DE SERVIDOR
 # ==============================================
 server.port=${PORT:8080}
+server.url=${SERVER_URL:http://149.130.176.157:8080}
+
+# ==============================================
+# CONFIGURACIÓN DE CARGA DE ARCHIVOS
+# ==============================================
+app.upload.profile-images.base-url=${server.url}/uploads/profiles
