--- a/Backend/Dev-learning-Platform/src/main/resources/application-test.properties
+++ b/Backend/Dev-learning-Platform/src/main/resources/application-test.properties
@@ -21,8 +21,8 @@ oci.enabled=false
 oci.config.enabled=false
 
 # JWT para tests
-jwt.secret.key=${JWT_SECRET_KEY}
-jwt.expiration.time=${JWT_EXPIRATION_TIME}
+jwt.secret.key=${JWT_SECRET_KEY:testSecretKeyForTestingPurposesOnly}
+jwt.expiration.time=${JWT_EXPIRATION_TIME:86400000}
 
 # Configuración de archivos para tests
 app.upload.profile-images.path=test-uploads
