--- a/Backend/Dev-learning-Platform/src/main/resources/application-dev.properties
+++ b/Backend/Dev-learning-Platform/src/main/resources/application-dev.properties
@@ -4,11 +4,13 @@ spring.application.name=Dev-learning-Platform
 # CONFIGURACIÓN DB DE DESARROLLO (MySQL)
 # ==============================================
 
-spring.datasource.url=jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/${DB_NAME:elearning_platform}
-spring.datasource.username=${DB_USER:elearning_user}
-spring.datasource.password=${DB_PASSWORD:elearning_password}
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=update
 
 # ==============================================
