Add Vercel's url for cors

--- a/Backend/Dev-learning-Platform/src/main/resources/application.properties
+++ b/Backend/Dev-learning-Platform/src/main/resources/application.properties
@@ -44,3 +44,6 @@ jwt.expiration.time=${JWT_EXPIRATION_TIME}
 # ==============================================
 # server.port=8080
 # server.url=http://localhost:8080
+
+# Configuración de CORS
+app.cors.allowed-origins=http://localhost:5173,https://edu-platform-omega-ten.vercel.app,https://edu-platform-git-develop-juan-valenzuelas-projects.vercel.app
