--- a/Frontend/jsconfig.json
+++ b/Frontend/jsconfig.json
@@ -4,7 +4,7 @@
     "paths": {
       "@/*": ["src/*"],
       "@/features/*": ["src/features/*"],
-      "@/components/*": ["src/components/*"],
+      "@/components/*": ["src/shared/components/*"],
       "@/ui/*": ["src/ui/*"],
       
       "@/shared/*": ["src/shared/*"],
