feat: integración completa de Stripe en backend
✨ Nuevas funcionalidades:
- Entidades Payment y PaymentSession con relaciones JPA
- Repositorios para gestión de pagos
- Servicios de pago con integración Stripe
- Controladores REST para pagos y sesiones
- Configuración de Stripe con variables de entorno
- TestDataService para datos de prueba (comentado para producción)

🔧 Configuración:
- Variables de entorno para claves de Stripe
- Perfiles de desarrollo y producción
- URLs de redirección configuradas
- Test de integración funcional

🔒 Seguridad:
- Claves API externalizadas en variables de entorno
- TestDataService solo activo en desarrollo
- Configuración limpia para producción

📚 Documentación:
- Archivo .env.example con variables requeridas
- Instrucciones de configuración incluidas

Listo para deploy en producción con variables de entorno configuradas.

--- a/Backend/Dev-learning-Platform/src/main/resources/application-prod.properties
+++ b/Backend/Dev-learning-Platform/src/main/resources/application-prod.properties
@@ -55,9 +55,20 @@ oci.auth.type=${OCI_AUTH_TYPE:config_file}
 oci.auth.instance-principal.enabled=${OCI_INSTANCE_PRINCIPAL:false}
 
 # ==============================================
-# CONFIGURACIÓN DE CORS
+# CONFIGURACIÓN DE STRIPE (PRODUCCIÓN)
 # ==============================================
-app.frontend.url=${FRONTEND_URL:https://your-frontend-domain.vercel.app}
+stripe.api.key=${STRIPE_API_KEY}
+stripe.api.public.key=${STRIPE_API_PUBLIC_KEY}
+stripe.webhook.secret=${STRIPE_WEBHOOK_SECRET}
+
+# URLs de Stripe para redirección (usar variables de entorno en producción)
+stripe.success.url=${FRONTEND_URL:https://edu-platform-omega-ten.vercel.app}/payment/success?session_id={CHECKOUT_SESSION_ID}
+stripe.cancel.url=${FRONTEND_URL:https://edu-platform-omega-ten.vercel.app}/payment/cancel
+
+# ==============================================
+# CONFIGURACIÓN DE CORS Y FRONTEND
+# ==============================================
+app.cors.allowed-origins=${FRONTEND_URL:https://edu-platform-omega-ten.vercel.app},https://edu-platform-omega-ten.vercel.app,https://edu-platform-git-develop-juan-valenzuelas-projects.vercel.app
 
 # ==============================================
 # CONFIGURACIÓN DE SERVIDOR
