--- a/Backend/Dev-learning-Platform/src/main/resources/application.properties
+++ b/Backend/Dev-learning-Platform/src/main/resources/application.properties
@@ -40,10 +40,19 @@ jwt.secret.key=${JWT_SECRET_KEY}
 jwt.expiration.time=${JWT_EXPIRATION_TIME}
 
 # ==============================================
-# CONFIGURACIÓN DE SERVIDOR
+# CONFIGURACIÓN DE STRIPE (PRODUCCIÓN)
 # ==============================================
-# server.port=8080
-# server.url=http://localhost:8080
+stripe.api.key=${STRIPE_API_KEY}
+stripe.api.public.key=${STRIPE_API_PUBLIC_KEY}
+stripe.webhook.secret=${STRIPE_WEBHOOK_SECRET}
 
-# Configuración de CORS
+# URLs de Stripe para redirección (usa las URLs reales de Vercel en producción)
+stripe.success.url=https://edu-platform-omega-ten.vercel.app/payment/success?session_id={CHECKOUT_SESSION_ID}
+stripe.cancel.url=https://edu-platform-omega-ten.vercel.app/payment/cancel
+
+# ==============================================
+# CONFIGURACIÓN DE FRONTEND Y CORS
+# ==============================================
+
+# Configuración de CORS - URLs permitidas para el frontend
 app.cors.allowed-origins=http://localhost:5173,https://edu-platform-omega-ten.vercel.app,https://edu-platform-git-develop-juan-valenzuelas-projects.vercel.app
