--- a/Backend/Dev-learning-Platform/pom.xml
+++ b/Backend/Dev-learning-Platform/pom.xml
@@ -78,8 +78,8 @@
             <version>${jjwt.version}</version>
             <scope>runtime</scope>
         </dependency>
-        
-        <!-- OCI Object Storage (solo cuando sea necesario) -->
+
+        <!-- OCI Object Storage -->
         <dependency>
             <groupId>com.oracle.oci.sdk</groupId>
             <artifactId>oci-java-sdk-objectstorage</artifactId>
@@ -140,6 +140,11 @@
             <groupId>org.testcontainers</groupId>
             <artifactId>mysql</artifactId>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.stripe</groupId>
+            <artifactId>stripe-java</artifactId>
+            <version>25.13.0</version> 
         </dependency>
     </dependencies>
     
