--- a/Backend/Dev-learning-Platform/src/main/resources/application-dev.properties
+++ b/Backend/Dev-learning-Platform/src/main/resources/application-dev.properties
@@ -5,13 +5,15 @@ spring.application.name=Dev-learning-Platform
 # ==============================================
 
 spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;MODE=MySQL;DATABASE_TO_LOWER=TRUE
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.defer-datasource-initialization=true
+spring.jpa.show-sql=true
 
 # ==============================================
 # CONFIGURACIÓN DE JWT
@@ -41,8 +43,8 @@ app.upload.local.base-url=http://localhost:8080/uploads
 # CONFIGURACIÓN DE OCI Object Storage (DESARROLLO)
 # ==============================================
 
-# Habilitado para congruencia con develop
-oci.enabled=true
+# Deshabilitado para desarrollo local
+oci.enabled=false
 oci.config.profile=DEFAULT
 oci.config.file=${user.home}/.oci/config
 oci.objectstorage.region=sa-bogota-1
@@ -54,10 +56,15 @@ oci.objectstorage.public-url-base=https://objectstorage.sa-bogota-1.oraclecloud.
 # CONFIGURACIÓN DE CORS
 # ==============================================
 
-app.frontend.url=http://localhost:3000
+app.frontend.url=http://localhost:5173
 
 # ==============================================
 # CONFIGURACIÓN DE SERVIDOR
 # ==============================================
 
 server.port=8080
+
+
+stripe.api.key=${STRIPE_API_KEY}
+stripe.api.public.key=${STRIPE_API_PUBLIC_KEY}
+stripe.webhook.secret=${STRIPE_WEBHOOK_SECRET}
