Add Stripe webhook secret

--- a/Backend/Dev-learning-Platform/src/main/resources/application-test.properties
+++ b/Backend/Dev-learning-Platform/src/main/resources/application-test.properties
@@ -51,3 +51,4 @@ spring.security.user.roles=USER
 # KEY de Stripe
 stripe.api.key=${STRIPE_API_KEY}
 stripe.api.public.key=${STRIPE_API_PUBLIC_KEY}
+stripe.webhook.secret=${STRIPE_WEBHOOK_SECRET}
