--- a/.github/workflows/ci-develop.yml
+++ b/.github/workflows/ci-develop.yml
@@ -40,13 +40,14 @@ jobs:
     
     - name: Deploy to OCI VM
       if: success()
+      timeout-minutes: 8
       uses: appleboy/ssh-action@v1
       with:
         host: ${{ secrets.VM_HOST }}
         username: ${{ secrets.VM_USER }}
         key: ${{ secrets.VM_SSH_KEY }}
-        timeout: 300s
-        command_timeout: 120s
+        timeout: 400s
+        command_timeout: 180s
         script: |
           set -e
           
@@ -74,42 +75,18 @@ jobs:
             sudo systemctl start elearning-backend
 
             echo "=== Verificando despliegue ==="
-            sleep 20
+            echo "Esperando 30 segundos para que el servicio inicie completamente..."
+            sleep 30
 
-            max_attempts=12
-            attempt=1
-            
-            # Verificar primero si el servicio está activo
-            if ! sudo systemctl is-active --quiet elearning-backend; then
-              echo "❌ El servicio no está activo"
-              sudo journalctl -u elearning-backend --no-pager -l -n 20
-              exit 1
-            fi
-            
-            # Intentar diferentes endpoints para verificar que la app está funcionando
-            until curl -sf http://localhost:8080/actuator/health 2>/dev/null || \
-                  curl -sf http://localhost:8080/health 2>/dev/null || \
-                  curl -sf http://localhost:8080/api/test/health 2>/dev/null || \
-                  curl -sf http://localhost:8080/ 2>/dev/null; do
-              echo "Intento $attempt/$max_attempts: Backend aún no disponible..."
-              attempt=$((attempt+1))
-              if [ $attempt -gt $max_attempts ]; then
-                echo "❌ Backend no respondió después de $max_attempts intentos."
-                echo "=== Estado del servicio ==="
-                sudo systemctl status elearning-backend
-                echo "=== Logs recientes ==="
-                sudo journalctl -u elearning-backend --no-pager -l -n 30
-                exit 1
-              fi
-              sleep 8
-            done
-            echo "✅ Despliegue exitoso y health check OK"
-            
+            # Verificar que el servicio está activo
             if sudo systemctl is-active --quiet elearning-backend; then
               echo "✅ Despliegue exitoso - Servicio está activo"
+              echo "=== Estado del servicio ==="
+              sudo systemctl status elearning-backend --no-pager -l
             else
-              echo "❌ Error en el despliegue"
-              sudo journalctl -u elearning-backend --no-pager -l -n 20
+              echo "❌ Error: El servicio no está activo"
+              sudo systemctl status elearning-backend --no-pager -l
+              sudo journalctl -u elearning-backend --no-pager -l -n 30
               exit 1
             fi
           else
