feat(jsconfig): añadir alias para servicios en la configuración de TypeScript
- Se ha añadido el alias "@/services/*" en el archivo `jsconfig.json` para facilitar la importación de servicios en el proyecto.
- Esta mejora optimiza la estructura de importaciones, promoviendo una mayor claridad y organización en el código.

--- a/Frontend/jsconfig.json
+++ b/Frontend/jsconfig.json
@@ -6,14 +6,15 @@
       "@/features/*": ["src/features/*"],
       "@/components/*": ["src/shared/components/*"],
       "@/ui/*": ["src/ui/*"],
-      
+      "@/services/*": ["src/services/*"],
+
       "@/shared/*": ["src/shared/*"],
       "@/core/*": ["src/core/*"],
       "@/interfaces/*": ["src/interfaces/*"],
     },
     "checkJs": false,
     "typeRoots": ["./node_modules/@types"]
-    
+
   },
   "exclude": ["node_modules", "dist"],
   "typeAcquisition": {
