Add url load balancer in CORS backd

--- a/Backend/Dev-learning-Platform/src/main/resources/application.properties
+++ b/Backend/Dev-learning-Platform/src/main/resources/application.properties
@@ -69,7 +69,7 @@ stripe.cancel.url=https://edu-platform-omega-ten.vercel.app/payment/cancel
 # ==============================================
 
 # Configuración de CORS - URLs permitidas para el frontend (patterns soportan wildcards)
-app.cors.allowed-origins=http://localhost:5173,https://edu-platform-omega-ten.vercel.app,https://edu-platform-git-develop-juan-valenzuelas-projects.vercel.app
+app.cors.allowed-origins=http://localhost:5173,https://edu-platform-omega-ten.vercel.app,https://edu-platform-git-develop-juan-valenzuelas-projects.vercel.app,https://157.137.234.237
 
 # ==============================================
 # CONFIGURACIÓN DE CARGA DE ARCHIVOS
