feat: Configuración completa para deploy en producción
 Deploy Configuration:
- Railway: Backend + PostgreSQL
- Vercel: Frontend + CDN
- Scripts automatizados de deploy
- Variables de entorno configuradas
- Health checks y monitoreo

 Archivos agregados:
- railway.json: Configuración Railway
- vercel.json: Configuración Vercel
- application-railway.properties: Config backend
- deploy-production.sh: Script automatizado
- DEPLOY_PRODUCTION.md: Guía completa

 Optimizaciones:
- Dockerfile multi-stage optimizado
- Build scripts para Railway
- Configuración de CORS para producción
- Variables de entorno seguras

 URLs de Producción:
- Frontend: https://e-learning-platform-v2.vercel.app
- Backend: https://e-learning-platform-backend.railway.app

--- a/Frontend/vercel.json
+++ b/Frontend/vercel.json
@@ -1,10 +1,30 @@
 {
-  "rewrites": [
-    { "source": "/api/(.*)", "destination": "http://149.130.176.157:8080/api/$1" },
-    { "source": "/auth/(.*)", "destination": "http://149.130.176.157:8080/auth/$1" },
-    { "source": "/(.*)", "destination": "/" }
+  "version": 2,
+  "builds": [
+    {
+      "src": "package.json",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "dist"
+      }
+    }
+  ],
+  "routes": [
+    {
+      "src": "/api/(.*)",
+      "dest": "https://e-learning-platform-backend.railway.app/api/$1"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/index.html"
+    }
   ],
   "env": {
-    "VITE_API_URL": "http://149.130.176.157:8080"
+    "VITE_API_BASE_URL": "https://e-learning-platform-backend.railway.app/api"
+  },
+  "functions": {
+    "app/api/**/*.js": {
+      "runtime": "nodejs18.x"
+    }
   }
 }
