Fix Flyway for tests: Disable Flyway in test profile to prevent circular dependency

--- a/Backend/Dev-learning-Platform/src/main/resources/application-test.properties
+++ b/Backend/Dev-learning-Platform/src/main/resources/application-test.properties
@@ -16,6 +16,9 @@ spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
 spring.jpa.defer-datasource-initialization=true
 
+# Deshabilitar Flyway para tests
+spring.flyway.enabled=false
+
 # Deshabilitar OCI completamente
 oci.enabled=false
 oci.config.enabled=false
