Fix Stripe for tests: Add test Stripe keys to prevent placeholder resolution errors

--- a/Backend/Dev-learning-Platform/src/main/resources/application-test.properties
+++ b/Backend/Dev-learning-Platform/src/main/resources/application-test.properties
@@ -19,6 +19,11 @@ spring.jpa.defer-datasource-initialization=true
 # Deshabilitar Flyway para tests
 spring.flyway.enabled=false
 
+# Deshabilitar Stripe para tests
+stripe.api.key=test-key
+stripe.api.public.key=test-public-key
+stripe.webhook.secret=test-webhook-secret
+
 # Deshabilitar OCI completamente
 oci.enabled=false
 oci.config.enabled=false
