Disable Flyway globally: Add spring.flyway.enabled=false to main application.properties

--- a/Backend/Dev-learning-Platform/src/main/resources/application.properties
+++ b/Backend/Dev-learning-Platform/src/main/resources/application.properties
@@ -19,6 +19,11 @@ spring.jpa.database-platform=${DB_DIALECT:org.hibernate.dialect.H2Dialect}
 spring.jpa.hibernate.ddl-auto=${DDL_AUTO:update}
 
 # ==============================================
+# CONFIGURACIÓN DE FLYWAY
+# ==============================================
+spring.flyway.enabled=false
+
+# ==============================================
 # CONFIGURACIÓN DE ALMACENAMIENTO
 # ==============================================
 app.upload.storage-type=local
