Update CORS to allow all Netlify subdomains with wildcard pattern

--- a/Backend/Dev-learning-Platform/src/main/resources/application.properties
+++ b/Backend/Dev-learning-Platform/src/main/resources/application.properties
@@ -58,7 +58,7 @@ stripe.cancel.url=${STRIPE_CANCEL_URL:http://localhost:5173/payment/cancel}
 # ==============================================
 # CONFIGURACIÓN DE CORS
 # ==============================================
-app.cors.allowed-origins=${CORS_ALLOWED_ORIGINS:http://localhost:5173,http://localhost:3000,https://e-learning-platform-v2.netlify.app,https://68d06339dd81684b199dbda2--e-learning-platform-v2.netlify.app}
+app.cors.allowed-origins=${CORS_ALLOWED_ORIGINS:http://localhost:5173,http://localhost:3000,https://e-learning-platform-v2.netlify.app,https://*.netlify.app}
 app.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
 app.cors.allowed-headers=*
 app.cors.allow-credentials=true
