Fix: Add HikariCP configuration and improve database detection for PostgreSQL

--- a/Backend/Dev-learning-Platform/src/main/resources/application-render.properties
+++ b/Backend/Dev-learning-Platform/src/main/resources/application-render.properties
@@ -9,6 +9,13 @@ spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
+# HikariCP Configuration
+spring.datasource.hikari.maximum-pool-size=5
+spring.datasource.hikari.minimum-idle=1
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.idle-timeout=600000
+spring.datasource.hikari.max-lifetime=1800000
+
 # JPA Configuration
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
