Fix: Remove spring.profiles.active from profile-specific files
- Commented out spring.profiles.active from application-railway.properties
- Commented out spring.profiles.active from application-prod.properties
- This fixes the InvalidConfigDataPropertyException in Render deployment

--- a/Backend/Dev-learning-Platform/src/main/resources/application-prod.properties
+++ b/Backend/Dev-learning-Platform/src/main/resources/application-prod.properties
@@ -1,5 +1,5 @@
 # Configuración para Producción - PostgreSQL
-spring.profiles.active=prod
+# spring.profiles.active=prod  # No permitido en archivos de perfil específicos
 
 # Configuración del servidor
 server.port=8080
