--- a/Backend/Dev-learning-Platform/src/main/resources/application-railway.properties
+++ b/Backend/Dev-learning-Platform/src/main/resources/application-railway.properties
@@ -1,5 +1,5 @@
 # Railway Production Configuration
-spring.profiles.active=railway
+# spring.profiles.active=railway  # No permitido en archivos de perfil específicos
 
 # Server Configuration
 server.port=${PORT:8080}
