Force redeploy: Trigger Render deployment with latest fixes

--- a/Backend/Dev-learning-Platform/src/main/resources/application-vercel.properties
+++ b/Backend/Dev-learning-Platform/src/main/resources/application-vercel.properties
@@ -1,10 +1,8 @@
 # Configuración para Vercel
 spring.application.name=Dev-learning-Platform
 
-# Base de datos PostgreSQL (usar la misma de Render)
-spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5432/elearning}
-spring.datasource.username=${DB_USERNAME:postgres}
-spring.datasource.password=${DB_PASSWORD:password}
+# Base de datos PostgreSQL (usar External Database URL de Render)
+spring.datasource.url=${DATABASE_URL}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA/Hibernate
@@ -30,7 +28,3 @@ logging.level.org.springframework.web=DEBUG
 
 # Server
 server.port=${PORT:8080}
-
-# Security
-spring.security.user.name=admin
-spring.security.user.password=admin123
